--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -11,7 +11,7 @@ title: Liberty Street Condo For Rent | 1 Bedroom Rental in Asheville, NC
   .slide-description
 
 .holder
-  %p Cozy one bedroom ground level apartment in a beautiful historic North Asheville neighborhood. Old World charm with modern conveniences in a quiet wooded neighborhood. Walking distance to Downtown, Greenlife, Trader Joe's, Harris Teeter, Asheville Yoga Center, and all of the hip new restaurants on Charlotte street. This space is perfect for an individual or a couple. A small pet would be considered.
+  %p Cozy one bedroom ground level apartment in a beautiful historic North Asheville neighborhood. Old World charm with modern conveniences in a quiet wooded neighborhood. Walking distance to Downtown, Greenlife, Trader Joe's, Harris Teeter, Asheville Yoga Center, and the new restaurants on Charlotte street. This space is perfect for an individual or a couple. A small pet would be considered.
 
   %p The living room has several large south facing windows for plenty of natural light. The bedroom has reading lights, a ceiling fan, and a full length mirror.
 
@@ -21,7 +21,7 @@ title: Liberty Street Condo For Rent | 1 Bedroom Rental in Asheville, NC
 
   %p Please note: the apartment is available immediately, however I will only be available to show it on Monday, December 21st. If you are interested and would like to see it, please #{link_to "Make A Reservation", "http://doodle.com/poll/zeziayd43rregnmh", target: "_blank"}, and bring with you a completed #{link_to "Application Form", image_path('application.pdf')}.
 
-  %p If you have any further questions, please email me at #{mail_to "libertycondo3@gmail.com"}.
+  %p If you have any further questions, please email me at #{mail_to "libertycondo3@gmail.com", "libertycondo3@gmail.com"}.
 
 
 :javascript
