--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -4,7 +4,12 @@
     %meta{:content => "IE=edge", "http-equiv" => "X-UA-Compatible"}
     %meta{:charset => "utf-8"}
     %meta{:content => "width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no", :name => "viewport"}
-    %title= current_page.data.title || "Liberty Street Condo For Rent | 1 Bedroom Rental in Asheville, NC"
+    %title= current_page.data.title || "One Bedroom Apartment for Rent in Asheville, NC"
+    %meta{:content => "Cozy one bedroom ground level apartment in a beautiful historic North Asheville neighborhood. Walking distance to Downtown, Greenlife, Trader Joe's, Harris Teeter, Asheville Yoga Center, and the new restaurants on Charlotte street.", :name => "description"}/
+    %meta{:content => "One Bedroom Apartment for Rent in Asheville, NC", :property => "og:title"}/
+    %meta{:content => "http://www.northlibertycondos.com", :property => "og:url"}/
+    %meta{:content => "http://www.northlibertycondos.com/images/1.jpg", :property => "og:image"}/
+    %meta{:content => "Cozy one bedroom ground level apartment in a beautiful historic North Asheville neighborhood. Walking distance to Downtown, Greenlife, Trader Joe's, Harris Teeter, Asheville Yoga Center, and the new restaurants on Charlotte street.", :property => "og:description"}/
     = stylesheet_link_tag :site
     %script{:src => "https://code.jquery.com/jquery-2.1.4.min.js"}
     = javascript_include_tag :all
