--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -18,14 +18,16 @@ body {
     h1 {
       font-family: $font-family;
       font-weight: 400;
-      margin: 10px 0;
+      max-width: 940px;
 
       @media (max-width:939px) {
         font-size: 1.3em;
+        margin: 10px auto;
       }
 
       @media (min-width:940px) {
         font-size: 1.8em;
+        margin: 10px auto;
       }
     }
   }
@@ -45,6 +47,15 @@ body {
 p {
   max-width: 940px;
   margin-bottom: 0 auto 20px;
+}
+
+p.quicklinks {
+  margin-top: 50px;
+}
+.quicklinks {
+  a {
+    color: #000;
+  }
 }
 
 #slides {
