--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -11,17 +11,15 @@ title: Liberty Street Condo For Rent | 1 Bedroom Rental in Asheville, NC
   .slide-description
 
 .holder
-  %p Cozy one bedroom ground level apartment in a beautiful historic North Asheville neighborhood. Old World charm with modern conveniences in a quiet wooded neighborhood. Walking distance to Downtown, Greenlife, Trader Joe's, Harris Teeter, Asheville Yoga Center, and the new restaurants on Charlotte street. This space is perfect for an individual or a couple. A small pet would be considered.
+  %p Cozy one bedroom ground level apartment in a beautiful historic North Asheville neighborhood. Old World charm with modern conveniences in a quiet wooded neighborhood. Walking distance to Downtown, Greenlife, Trader Joe's, Harris Teeter, Asheville Yoga Center, and the restaurants on Charlotte street. This space is perfect for an individual or a couple. A small pet would be considered.
 
   %p The living room has several large south facing windows for plenty of natural light. The bedroom has reading lights, a ceiling fan, and a full length mirror.
 
   %p The apartment is in a beautiful brick building built in the 1920's. The front yard is wooded, while the back of the house provides ample off-street parking. There is a coin operated washer and dryer in the basement. There is access to the public bus line, but being less than 1 mile from the city center, it is very easy to walk or ride a bicycle to most of the major interest areas or UNC Asheville.
 
-  %p $985 per month with a one month security deposit, references, and credit check.
+  %p $875 per month with a one month security deposit, references, and credit check.
 
-  %p Please note: the apartment is available immediately, however I will only be available to show it on Monday, December 21st. If you are interested and would like to see it, please #{link_to "Make A Reservation", "http://doodle.com/poll/zeziayd43rregnmh", target: "_blank"}, and bring with you a completed #{link_to "Application Form", image_path('application.pdf')}.
-
-  %p If you have any further questions, please email #{mail_to "libertycondo3@gmail.com", "libertycondo3@gmail.com"}.
+  %p The apartment is currently available. If you are interested and would like to see it, or have any further questions, please email #{mail_to "libertycondo3@gmail.com", "libertycondo3@gmail.com"}.
 
   %p
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.8373168918592!2d-82.55314568476774!3d35.60707934164259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8859f4a56192e0a7%3A0x860a5dc3415f7151!2s109+N+Liberty+St%2C+Asheville%2C+NC+28801!5e0!3m2!1sen!2sus!4v1450370082378" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -29,9 +27,8 @@ title: Liberty Street Condo For Rent | 1 Bedroom Rental in Asheville, NC
   %p.quicklinks
     Quick Links:
   %ul.quicklinks
-    %li= link_to "Make A Reservation", "http://doodle.com/poll/zeziayd43rregnmh", target: "_blank"
-    %li= link_to "Application Form", image_path('application.pdf'), target: "_blank"
     %li= mail_to "libertycondo3@gmail.com", "libertycondo3@gmail.com"
+    %li= link_to "Application Form", image_path('application.pdf'), target: "_blank"
 
 :javascript
   function set_text(number) {
