--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -33,6 +33,24 @@ body {
   }
 }
 
+.iframe-wrapper {
+  position: relative;
+  padding-bottom: 65.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: auto;
+  -webkit-overflow-scrolling:touch; //<<--- THIS IS THE KEY
+  border: solid black 1px;
+}
+
+.iframe-wrapper iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .holder {
   max-width: 940px;
   margin: 0 auto;
