Not for rent any more

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -30,6 +30,11 @@ body {
         margin: 10px auto;
       }
     }
+
+    img.default {
+      width: 100%;
+      height: auto;
+    }
   }
 }
 
@@ -43,137 +48,137 @@ body {
   border: solid black 1px;
 }
 
-.iframe-wrapper iframe {
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.holder {
-  max-width: 940px;
-  margin: 0 auto;
-}
-
-.slide-description {
-  text-align: center;
-  font-weight: 700;
-  margin-bottom: 20px;
-}
+//.iframe-wrapper iframe {
+//  position: absolute;
+//  top:0;
+//  left: 0;
+//  width: 100%;
+//  height: 100%;
+//}
+//
+//.holder {
+//  max-width: 940px;
+//  margin: 0 auto;
+//}
+//
+//.slide-description {
+//  text-align: center;
+//  font-weight: 700;
+//  margin-bottom: 20px;
+//}
 
 p {
   max-width: 940px;
   margin-bottom: 0 auto 20px;
 }
 
-p.quicklinks {
-  margin-top: 50px;
-}
-.quicklinks {
-  a {
-    color: #000;
-  }
-}
-
-#slides {
-  display: none
-}
-
-#slides .slidesjs-navigation {
-  margin-top:5px;
-}
-
-a.slidesjs-next,
-a.slidesjs-previous,
-a.slidesjs-play,
-a.slidesjs-stop {
-  background-image: url(image_path('btns-next-prev.png'));
-  background-repeat: no-repeat;
-  display:block;
-  width:12px;
-  height:18px;
-  overflow: hidden;
-  text-indent: -9999px;
-  float: left;
-  margin-right:5px;
-}
-
-a.slidesjs-next {
-  margin-right:10px;
-  background-position: -12px 0;
-}
-
-a:hover.slidesjs-next {
-  background-position: -12px -18px;
-}
-
-a.slidesjs-previous {
-  background-position: 0 0;
-}
-
-a:hover.slidesjs-previous {
-  background-position: 0 -18px;
-}
-
-a.slidesjs-play {
-  width:15px;
-  background-position: -25px 0;
-}
-
-a:hover.slidesjs-play {
-  background-position: -25px -18px;
-}
-
-a.slidesjs-stop {
-  width:18px;
-  background-position: -41px 0;
-}
-
-a:hover.slidesjs-stop {
-  background-position: -41px -18px;
-}
-
-.slidesjs-pagination {
-  margin: 7px 0 0;
-  float: right;
-  list-style: none;
-}
-
-.slidesjs-pagination li {
-  float: left;
-  margin: 0 1px;
-}
-
-.slidesjs-pagination li a {
-  display: block;
-  width: 13px;
-  height: 0;
-  padding-top: 13px;
-  background-image: url(image_path('pagination.png'));
-  background-position: 0 0;
-  float: left;
-  overflow: hidden;
-}
-
-.slidesjs-pagination li a.active,
-.slidesjs-pagination li a:hover.active {
-  background-position: 0 -13px
-}
-
-.slidesjs-pagination li a:hover {
-  background-position: 0 -26px
-}
-
-#slides a:link,
-#slides a:visited {
-  color: #333
-}
-
-#slides a:hover,
-#slides a:active {
-  color: #9e2020
-}
+//p.quicklinks {
+//  margin-top: 50px;
+//}
+//.quicklinks {
+//  a {
+//    color: #000;
+//  }
+//}
+//
+//#slides {
+//  display: none
+//}
+//
+//#slides .slidesjs-navigation {
+//  margin-top:5px;
+//}
+//
+//a.slidesjs-next,
+//a.slidesjs-previous,
+//a.slidesjs-play,
+//a.slidesjs-stop {
+//  background-image: url(image_path('btns-next-prev.png'));
+//  background-repeat: no-repeat;
+//  display:block;
+//  width:12px;
+//  height:18px;
+//  overflow: hidden;
+//  text-indent: -9999px;
+//  float: left;
+//  margin-right:5px;
+//}
+//
+//a.slidesjs-next {
+//  margin-right:10px;
+//  background-position: -12px 0;
+//}
+//
+//a:hover.slidesjs-next {
+//  background-position: -12px -18px;
+//}
+//
+//a.slidesjs-previous {
+//  background-position: 0 0;
+//}
+//
+//a:hover.slidesjs-previous {
+//  background-position: 0 -18px;
+//}
+//
+//a.slidesjs-play {
+//  width:15px;
+//  background-position: -25px 0;
+//}
+//
+//a:hover.slidesjs-play {
+//  background-position: -25px -18px;
+//}
+//
+//a.slidesjs-stop {
+//  width:18px;
+//  background-position: -41px 0;
+//}
+//
+//a:hover.slidesjs-stop {
+//  background-position: -41px -18px;
+//}
+//
+//.slidesjs-pagination {
+//  margin: 7px 0 0;
+//  float: right;
+//  list-style: none;
+//}
+//
+//.slidesjs-pagination li {
+//  float: left;
+//  margin: 0 1px;
+//}
+//
+//.slidesjs-pagination li a {
+//  display: block;
+//  width: 13px;
+//  height: 0;
+//  padding-top: 13px;
+//  background-image: url(image_path('pagination.png'));
+//  background-position: 0 0;
+//  float: left;
+//  overflow: hidden;
+//}
+//
+//.slidesjs-pagination li a.active,
+//.slidesjs-pagination li a:hover.active {
+//  background-position: 0 -13px
+//}
+//
+//.slidesjs-pagination li a:hover {
+//  background-position: 0 -26px
+//}
+//
+//#slides a:link,
+//#slides a:visited {
+//  color: #333
+//}
+//
+//#slides a:hover,
+//#slides a:active {
+//  color: #9e2020
+//}
 
 .navbar {
   overflow: hidden
