--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,7 +4,7 @@ title: Norty Liberty Street Condos | Asheville, NC
 
 .container
   %h1 Norty Liberty Street Condos
-  = image_tag "1.jpg", alt: "Norty Liberty Street Condos | Asheville, NC"
+  = image_tag "1.jpg", alt: "Norty Liberty Street Condos | Asheville, NC", class: "default"
 
 -# %h1 North Asheville: One Bedroom Apartment for Rent
 -#
